tmp/pihole/service/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pihole
  namespace: pihole
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`pihole.local.solonsstuff.com`)
      kind: Rule
      services:
        - name: pihole-tcp
          port: 80
      middlewares:
        - name: default-headers
  tls:
    secretName: local-solonsstuff-com-live-tls
